--- a/pom.xml
+++ b/pom.xml
@@ -50,11 +50,6 @@
             <artifactId>jasperreports-fonts</artifactId>
             <version>4.0.0</version>
         </dependency>
-<!--        <dependency>
-            <groupId>ru.systemres.jasperreports</groupId>
-            <artifactId>arial-fonts-utf8</artifactId>
-            <version>1.0</version>
-        </dependency>-->
 
         <!-- marked the embedded servlet container as provided -->
         <dependency>
@@ -85,6 +80,12 @@
         <repository>
             <id>spring-releases</id>
             <url>https://repo.spring.io/libs-release</url>
+        </repository>
+        <repository>
+            <id>Central</id>
+            <name>Central</name>
+            <url>http://repo1.maven.org/maven2/</url>
+            <layout>default</layout>
         </repository>
     </repositories>
 
