--- a/pom.xml
+++ b/pom.xml
@@ -84,7 +84,7 @@
         <repository>
             <id>Central</id>
             <name>Central</name>
-            <url>http://repo1.maven.org/maven2/</url>
+            <url>http://maven.apache.org</url>
             <layout>default</layout>
         </repository>
     </repositories>
